--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --background: 230 100% 99%;
+  --foreground: 222.2 47.4% 11.2%;
+  --primary: 227, 54%, 16%;
+  --primary-foreground: 210 40% 98%;
+  --secondary: 226 10% 58%;
+  --secondary-foreground: 222.2 47.4% 11.2%;
+  --accent: 210 40% 96.1%;
+  --accent-foreground: 222.2 47.4% 11.2%;
+  --ring: 215 20.2% 65.1%;
+  --radius: 0.5rem;
+  --border: 214.3 31.8% 91.4%;
+}
+
 h1 {
   @apply text-4xl font-bold;
 }
